Fixed text annotation not showing and not working on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -861,3 +861,8 @@ header, section, footer, aside, nav, main, article, figure {
 .path-mod-pdfannotator .pdfannotator-statistic #chart-container {
     min-height: 500px;
 }
+
+.toolbaritem .pdfannotator_text {
+    display: inline-block;
+    visibility: visible;
+}
